@@ -114,6 +114,8 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
     using encrypted password
 - 07/11/2022
 65. create_services: removed domainkeys setup for new installations
+- 08/11/2022
+66. qmail-remote.c: clear input buffer when trying next MX (Franz Sirl)
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
